# Beyond-The-Basic

./: README.md
Algorithms_startpunt/: main.cpp
Bankrekening/: Bankrekening.cpp  Bankrekening.h  CMakeLists.txt  Transactie.cpp  Transactie.h  main.cpp  tempCodeRunnerFile.cpp
Opdracht-MoveSemanticsBlock_startpunt/: Block.cpp  Block.h
Opdracht-ParentChildPtr_startpunt/: Parent.cpp  Parent.h  main.cpp
Opdracht-ProducerConsumer_startpunt/: CMakeLists.txt  main.cpp
Orcs-and-elves/: CMakeLists.txt
Orcs-and-elves/.cpp/: Decorator.cpp  Elf.cpp  Npc.cpp  Orc.cpp  RoleDecorator.cpp  elf.cpp  inventory.cpp  main.cpp  npc.cpp  orc.cpp
Orcs-and-elves/.h/: Decorator.h  Elf.h  Npc.h  Orc.h  RoleDecorator.h  elf.h  inventory.h  npc.h  orc.h
Strategies for Game of Life/: CMakeLists.txt  Main.cpp  Matrix.cpp  Matrix.h  Rules.cpp  Rules.h  StandardRules.cpp  StandardRules.h
Tamplates/: CMakeLists.txt  Main.cpp  Template.h
thread-safe Inventory/: CMakeLists.txt  Inventory.cpp  Inventory.h  main.cpp
